force-app/main/default/objects/Book__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author Name</label>
    <referenceTo>Sedin_Author__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>