force-app/main/default/objects/Book__c/fields/Date_of_publish__c.field-meta.xml
<CustomField>
    <fullName>Date_of_publish__c</fullName>
    <label>Date of publish</label>
    <type>Date</type>
</CustomField>