force-app/main/default/objects/Book__c/fields/Date_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Return__c</fullName>
    <formula>Date_of_publish__c  +  365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Return</label>
    <type>Date</type>
</CustomField>